// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should match snapshot and render EventDetail 1`] = `
<Fragment>
  <Connect(Helmet)
    title="first Event - Augsburg"
  />
  <Translate(EventDetail)
    event={
      EventModel {
        "_address": "address",
        "_allDay": true,
        "_availableLanguages": Map {
          "de" => "/augsburg/de/events/erstes_event",
          "ar" => "/augsburg/ar/events/erstes_event",
        },
        "_content": "content",
        "_endDate": "2017-11-18T19:30:00.000Z",
        "_excerpt": "excerpt",
        "_id": 1,
        "_path": "/augsburg/en/events/first_event",
        "_startDate": "2017-11-18T09:30:00.000Z",
        "_thumbnail": "thumbnail",
        "_title": "first Event",
        "_town": "town",
      }
    }
    language="en"
    onInternalLinkClick={[Function]}
  />
</Fragment>
`;

exports[`EventsPage should match snapshot and render EventList 1`] = `
<Fragment>
  <Connect(Helmet)
    title="pageTitle - Augsburg"
  />
  <Translate(EventList)
    city="augsburg"
    events={
      Array [
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "de" => "/augsburg/de/events/erstes_event",
            "ar" => "/augsburg/ar/events/erstes_event",
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 1,
          "_path": "/augsburg/en/events/first_event",
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "first Event",
          "_town": "town",
        },
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "en" => "/augsburg/de/events/zwotes_event",
            "ar" => "/augsburg/ar/events/zwotes_event",
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 2,
          "_path": "/augsburg/en/events/second_event",
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "second Event",
          "_town": "town",
        },
        EventModel {
          "_address": "address",
          "_allDay": true,
          "_availableLanguages": Map {
            "de" => "/augsburg/de/events/drittes_event",
            "ar" => "/augsburg/ar/events/erstes_event",
          },
          "_content": "content",
          "_endDate": "2017-11-18T19:30:00.000Z",
          "_excerpt": "excerpt",
          "_id": 3,
          "_path": "/augsburg/en/events/third_event",
          "_startDate": "2017-11-18T09:30:00.000Z",
          "_thumbnail": "thumbnail",
          "_title": "third Event",
          "_town": "town",
        },
      ]
    }
    language="en"
    onInternalLinkClick={[Function]}
  />
</Fragment>
`;

exports[`EventsPage should match snapshot and render Failure if event does not exist 1`] = `
<Translate(FailureSwitcher)
  error={[Error: The event invalid_event does not exist here.]}
/>
`;
